[package]
name = "solana-escrow"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.7.3"
thiserror = "1.0.24"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"

borsh = "0.8"
bincode = "1.3.3"
serde = "1.0.112"
serde_derive = "1.0.103"
[lib]
crate-type = ["cdylib", "lib"]
